--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: secondlife/action-autobuild@v3
         with:
           addrsize: ${{ matrix.addrsize }}
-          checkout-build-variables: false
+          build-variables-ref: master
   release:
     needs: build
     runs-on: [ubuntu-latest]
